--- a/novo.css
+++ b/novo.css
@@ -89,3 +89,66 @@
     padding: 50px 0;
 }
 
+
+
+
+@media(max-width: 450px){
+    /*HTML - 18px -> 1rem -> 18px*/
+/*geral*/
+    p, input, textarea, #navbar-list li a{
+        font-size: 1.2rem;
+    }
+
+    /*navbar*/
+    #section h2{
+        display: none
+    }
+
+    #section img{
+        top: 9px;
+    }
+
+    #section ul{
+        margin-top: 1.1rem; /*root element*/
+    }
+
+    /*banner*/
+    #section{
+        height: 40vh;
+        padding-top: 5vh;
+        padding-bottom: 10vh; ;
+    }
+
+    
+    /*about*/
+    #section{
+        padding: 2rem;
+        height: auto;
+        padding-bottom: 50px;
+    }
+
+    
+    .central{
+        border-top: 1px solid #CCC;
+        border-bottom: 1px solid #CCC;
+    }
+
+    /*Jobs*/
+
+    #jobs-section h2, #jobs-section p{
+        width: 85%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    
+    /*footer*/
+    footer{
+        padding: 50px 15px;
+    }
+
+    footer form {
+        width: 100%;
+    }
+
+}
