--- a/mt.css
+++ b/mt.css
@@ -12,7 +12,7 @@
 .body {
     margin-left:50px;
     margin-bottom:0px;
-    background-color: rgba(250, 12, 250, 0.342);
+    background-color: white;
     
 }
 
