--- a/per.css
+++ b/per.css
@@ -6,10 +6,11 @@
 
 .circle{
     border-radius: 60px;   
+    padding: 10px;
 }
 
 .descrição{
-   padding-top: 30px;
+   padding-top: 0px;
 }
 
 .videos {
@@ -26,4 +27,16 @@
     color: red;
     width: 200px;
     height: 100px;
+}
+.corpo {
+    padding: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.rodapé {
+    padding-top: 30px;
+    background-color: gainsboro;
+    color: green;
+    font-family: monospace;
 }
