--- a/neon.css
+++ b/neon.css
@@ -1,36 +1,3 @@
-.zoom {
-	overflow: hidden;
-}
-
-.zoom img {
-	max-width: 100%;
-	-moz-transition: all 0.3s;
-	-webkit-transition: all 0.3s;
-	transition: all 0.5s;
-	padding-top: 5px;
-}
-
-.zoom:hover img {
-	-moz-transform: scale(1.1);
-	-webkit-transform: scale(1.1);
-	transform: scale(1.1);
-	padding-top: 5px;
-}
-
-.text-item {
-	position: absolute;
-	left: 5%;
-	right: 5%;
-	bottom: 20px;
-	z-index: 10;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	color: #ffffff;
-	text-align: center;
-	font-weight: 700;
-	text-shadow: 0 1px 3px rgba(0,0,0,0.6);
-}
-
 # {
     margin: 0;
     padding: 0;
@@ -47,13 +14,13 @@ body {
     background: #050801;
 }
 
-p {
+a {
     position: relative;
     display: inline-block;
     padding: 25px 30px;
     margin: 40px 0;
     color: #03e9f4;
-    font-size: 85px;
+    font-size: 24px;
     text-decoration: none;
     text-transform: uppercase;
     overflow: hidden;
@@ -63,13 +30,13 @@ p {
 
 }
 
-p:nth-child(1)
+a:nth-child(1)
 {
     filter: hue-rotate(290deg);
 }
 
 
-p:hover {
+a:hover {
     background: #1fe995;
     color: #050801;
     box-shadow: 0 0 5px #03e9f4,
@@ -78,12 +45,12 @@ p:hover {
                 0 0 200px #03e9f4,       
 }
 
-p span {
+a span {
     position: absolute;
     display: block;
 }
 
-p span:nth-child(1) {
+a span:nth-child(1) {
     top: 0;
     left: -100;
     width: 100%;
@@ -103,10 +70,4 @@ p span:nth-child(1) {
     }
 }
 
-
-
-.titulo {
-    padding-top: 80px;
-}
-    
 
