--- a/slide2d.css
+++ b/slide2d.css
@@ -1,43 +1,17 @@
-.titulo {
-    margin-top: 50px;
-    margin-left: 06px;
-    margin-bottom: 30px;
-    padding-top: 350px;
-    }
-
-.fundo {background-color: whitesmoke
-    margin-top: 60px;
-    margin-left: 80px;
-    margin-bottom: 40px;
-}    
-
-.texto {
-    margin-bottom: 40px;
-    margin-top: 30px;
-    color: rgb(7, 7, 7);
-
-}
-
-.css {
-   margin-bottom: 20px;
-   margin-bottom: 20px;
-   margin-block-end: 40px;
-}
-
-
 .slideshow 
 {
     margin: 0 auto;
-    padding-top: 0px;
-    height: 500px;
+    padding-top: 50px;
+    height: 700px;
+    background-color: skyblue;
     box-sizing: border-box;
 }
 
 .content
 {
     margin: auto;
-    width: 180px;
-    perspective: 800px;
+    width: 190px;
+    perspective: 1000px;
     position: relative;
     padding-top: 80px;
 }
@@ -46,7 +20,7 @@
 {
     width: 100%;
     position: absolute;
-    float: left;
+    float: right;
     animation: rotar 15s infinite linear;
     transform-style: preserve-3d;
 }
@@ -59,12 +33,11 @@
 
 .content-carrousel figure
 {
-    width: 110%;
-    height: 200px;
-    border: 5px solid #15f701;
+    width: 100%;
+    height: 120px;
+    border: 1px solid #4d4d4d;
     overflow: hidden;
     position: absolute;
-    border-radius: 30px;
 }
 
 .content-carrousel figure:nth-child(1)
@@ -142,8 +115,4 @@
         transform: rotateY(360deg);
     }
 }
-
-
-
-
 
