--- a/mara.css
+++ b/mara.css
@@ -1,149 +1,38 @@
 .titulo {
-    margin-top: 5%;
-    margin-left: 6%;
-    margin-bottom: 30%;
-    padding-top: 10px;
+    margin-top: 1%;
+    margin-left: 1%;
+    margin-bottom: 1%;
+    padding-top: 1%;
+    width: 1%;
+    height: 1%;
     }
 
 .fundo {background-color: whitesmoke;
-    margin-top: 10%;
-    margin-left: 10%;
-    margin-bottom: 10%;
+    margin-top: 1%;
+    margin-left: 13%;
+    margin-bottom: 1%;
+    padding-top: 1%;
 }    
 
 .texto {
-    margin-bottom: 40%;
-    margin-top: 30%;
+    margin-bottom: 10%;
+    margin-top: 5%;
     color: rgb(7, 7, 7);
-
+    width: 1%;
+    height: 5%;
 }
 
-.css {
-   margin-bottom: 20%;
-   margin-bottom: 20%;
-   margin-block-end: 40px;
-}
-
-
-.slideshow 
-{
-    margin: 0 auto;
-    padding-top: 10%;
-    height: 30%;
-    box-sizing: border-box;
-}
-
-.content
-{
-    margin: auto;
-    width: 50%;
-    perspective: 70%;
-    position: relative;
-    padding-top: 10%;
-}
-
-.content-carrousel
-{
-    width: 30%;
-    position: absolute;
-    float: left;
-    animation: rotar 15s infinite linear;
-    transform-style: preserve-3d;
-}
-
-.content-carrousel:hover
-{
-    animation-play-state: paused;
-    cursor: pointer;
-}
-
-.content-carrousel figure
-{
-    width: 50%;
+.fotos {
+    width: 80%;
     height: 50%;
-    border: 5px solid #15f701;
-    overflow: hidden;
-    position: absolute;
-    border-radius: 30%;
 }
 
-.content-carrousel figure:nth-child(1)
-{
-    transform: rotateY(0deg) translateZ(100%);
+.fotos1 {
+    width: 80%;
+    height: 40%;
 }
 
-.content-carrousel figure:nth-child(2)
-{
-    transform: rotateY(40deg) translateZ(100%);
+.fotos10 {
+    width: 80%;
+    height: 10%;
 }
-
-.content-carrousel figure:nth-child(3)
-{
-    transform: rotateY(80deg) translateZ(100%);
-}
-
-.content-carrousel figure:nth-child(4)
-{
-    transform: rotateY(120deg) translateZ(100%);
-}
-
-.content-carrousel figure:nth-child(5)
-{
-    transform: rotateY(160deg) translateZ(300%);
-}
-
-.content-carrousel figure:nth-child(6)
-{
-    transform: rotateY(200deg) translateZ(100%);
-}
-
-.content-carrousel figure:nth-child(7)
-{
-    transform: rotateY(240deg) translateZ(100%);
-}
-
-.content-carrousel figure:nth-child(8)
-{
-    transform: rotateY(280deg) translateZ(100%);
-}
-
-.content-carrousel figure:nth-child(9)
-{
-    transform: rotateY(320deg) translateZ(100%);
-}
-
-.shadow
-{
-    position: absolute;
-    box-shadow: 0% 0% 20% #000;
-    border-radius: 2%;
-}
-
-.content-carrousel img
-{
-    image-rendering: auto;
-    transition: all 300ms;
-    width: 60%;
-    height: 600%;
-}
-
-.content-carrousel img:hover
-{
-    transform: scale(1.2);
-    transition: all 300ms;
-}
-
-@keyframes rotar
-{
-    from {
-        transform: rotateY(0deg);
-    }
-    to {
-        transform: rotateY(360deg);
-    }
-}
-
-
-
-
-
