--- a/index2.css
+++ b/index2.css
@@ -1,5 +1,5 @@
 .header {
-    padding-left: 3%;
+    padding-left: 1%;
 }
 
 .header-site {
@@ -14,7 +14,12 @@
 }
 
 .html {
-    padding-right: 10%;
+    padding-right: 1%;
+}
+
+.iframe {
+    width: 100%;
+    height: 100%;
 }
 
 
